...
                  },
                  reverseAnimatedHeaderStyle,
                ]}>
                <TouchableOpacity style={styles.center} onPress={handleOpenProgramSelector}>
                  <SharedElement id={'bg_header_text'}>
                    <View style={{ height: 80 }}>
                      <Text style={styles.programName} testID="program_name">
                        {currentProgram.title?.toUpperCase()}
                      </Text>
                      <Text style={styles.trainerName}>{`WITH ${currentTrainer?.name?.toUpperCase()}`}</Text>
                    </View>
                  </SharedElement>
                  <ChevronDown color={globals.styles.colors.colorWhite} style={styles.chevronDown} />
...
              </REAnimated.View>
              <REAnimated.ScrollView
                ref={scrollView}
                style={styles.animatedScrollview}
                showsVerticalScrollIndicator={false}
                onScroll={scrollHandler}
                testID="category_scrollview"
                scrollEventThrottle={16}>
                <Animatable.View ref={panel} style={styles.panel} useNativeDriver>
                  <Week_Header
                    showAllWeeks={currentProgram.all_weeks_available}
                    showRounds={!currentProgram.hide_rounds}
                    onPickWeek={onPickWeek}
...
